6/15/2009
	- Change the ResolverConfig.refresh() method to only synchronize the
	  assignment to currentConfig, not the code which determines the new
	  configuration.

6/12/2009
	- The TSIG verification routines (TSIG.verify,
	  TSIG.StreamVerifier.verify() now update the Message object with the
	  status of the verification in addition to returning the status.
	
6/03/2009
	- The lists of servers and searchlist entries in ResolverConfig should
	  not be static.
	  (Isabelle Dalmasso <isa@8x8.com>)

5/28/2009
	- The canonical form of an NSEC record was incorrectly computed - the
	  next name should not have its case changed.
	  (David Blacka <davidb@verisign.com>)

	- Add support for NSEC3, NSEC3PARAM, and DLV records.
	  (based on a patch from David Blacka <davidb@verisign.com>)

9/17/2008
	- Fix LOC record rounding.
	  (reported by Klaus Malorny <Klaus.Malorny@knipp.de>)

8/22/2008
	- Type 4 NXDOMAIN responses were incorrectly cached as referrals.
	  (reported by Luis Silva <luisfilsilva@gmail.com>)

8/06/2008
	- Randomize the UDP source ports for outgoing queries.
	  (based on a patch from Derek Morr <derekmorr@psu.edu>)

4/25/2008
	- Add support for the DHCID record.

4/18/2008
	- The prior change to allow creating Zones from AXFR-style IXFR
	  ZoneTransferIn responses didn't work.
	- Update the service provider to work with Java 1.6 and earlier
	  versions. (patch from <thelian@users.sourceforge.net>)

2/19/2008
	- The Zone.removeRecord() method threw an exception if there were no
	  other records in the same RRset.
	  (reported by Yoyo Chen <yoyochen@sinter.com.tw>)

	- Parsing and formatting LOC records should not depend on the current
	  locale. (reported by Klaus Malorny <Klaus.Malorny@knipp.de>)

1/31/2008
	- When converting messages to wire format, don't include name
	  compression pointers greater than 2^14 - 1.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

1/24/2008
	- 2.0.6 released

1/22/2008